# megamorse

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: publish.yaml
megamorse/: Cargo.toml
megamorse/src/: lib.rs
megamorse_core/: Cargo.toml  README.md
megamorse_core/src/: code.rs  lib.rs  sequence.rs  word.rs
megamorse_proc_macro/: Cargo.toml  README.md
megamorse_proc_macro/src/: lib.rs
