[package]
name = "megamorse"
description = "A simple morse code translator"
readme = "../README.md"
license.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
keywords = ["morse", "no-std", "no-alloc", "embedded"]
categories = ["no-std::no-alloc", "embedded"]

[dependencies]
megamorse_core.workspace = true
megamorse_proc_macro.workspace = true
